--- a/css/global.css
+++ b/css/global.css
@@ -1,19 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
 
 *,
-*::before,
-*::after {
+*::after,
+*::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* outline: 1px solid red; */
 }
 
 :root {
-    --text-color: black;
+    --text-color: #000;
+    --border-color: #000;
     --accent-color: #a5c7cf;
-    --border-color: black;
-    font-family: "DotGothic16", serif;
+    --background-color: #fff;
     scroll-behavior: smooth;
+    font-family: "DotGothic16", sans-serif;
+    color: var(--text-color);
 }
 
 img {
@@ -25,4 +28,3 @@ img {
     max-width: 1200px;
     margin: auto;
 }
-
