--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import "./global.css";
-@import "./components.css";
+@import "./controls.css";
 @import "./index.header.css";
 @import "./index.products.css";
+@import "./index.footer.css";
