--- a/css/index.products.css
+++ b/css/index.products.css
@@ -8,13 +8,11 @@
     @media (min-width: 640px) {
       grid-template-columns: 1fr 1fr;
     }
-
     @media (min-width: 960px) {
       grid-template-columns: 1fr 1fr 1fr;
     }
-
     @media (min-width: 1200px) {
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 
     .products__item {
@@ -23,3 +21,4 @@
     }
   }
 }
+
